feat/RCT-200-EnsureProperExitCodes added file read failures and what tests we could